# CAG

./: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artgen/: __init__.py  cli.py  core.py  interactive.py
tests/: test_core.py
web/: index.html  sketch.js
